Removed "User ID" field from Userinfo command embed.
* This field was completely unnecessary, every user knows how to copy the ID of another user, additionally, if they don't know how to, then they also have no idea how to use Slash Commands.
* I also changed the `roles.get(0)` method call to `roles.getFirst()` as Java 21 introduced this method for readbility purposes.